# youtube-strategy

./: .env.example  .gitignore  App.tsx  README.md  SECURITY.md  constants.ts  index.html  metadata.json  package-lock.json  types.ts  utils.ts  vite-env.d.ts  vite.config.ts
Developer/Apps/Palantir_Ontology_Dashboard/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  package.json  vite.config.ts  vitest.config.ts
Developer/Apps/Palantir_Ontology_Dashboard/src/: App.tsx
Developer/Apps/Palantir_Ontology_Dashboard/src/components/: NotificationCenter.tsx  OntologyFlowView.tsx  QuickActionBar.tsx  SearchCommand.tsx  WorkspaceManager.tsx
Developer/Apps/Palantir_Ontology_Dashboard/src/lib/: logger.ts  obsidian.ts
Developer/Apps/Palantir_Ontology_Dashboard/src/stores/: useOntologyStore.ts
Developer/Apps/Palantir_Ontology_Dashboard/src/utils/: layerClassification.test.ts
Developer/youtube-strategy/: App.tsx  README.md  package.json  types.ts
Developer/youtube-strategy/components/: AnalysisChart.tsx  ApiKeyModal.tsx
Developer/youtube-strategy/hooks/: useLocalStorage.ts
Developer/youtube-strategy/services/: geminiService.ts  youtubeService.ts
Obsidian-Syncthing/MyObsidianVault/Thinking-Machine/thinking-machine-dashboard/: vite.config.ts
SGR/SAMANDA_FE/notebooks/: tech_app.py
components/: AnalysisChart.tsx  ApiKeyModal.tsx  ContentDiscovery.tsx  ShortsManagement.tsx
mcp/: QUICKSTART.md  README.md  claude_desktop_config.example.json  evaluation.xml  pyproject.toml  youtube_strategy_mcp.py
services/: geminiService.ts  youtubeService.ts
